get menu dishes by date + replacements
